--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
   "description": "The Utils module",
   "main": "./dist/main.js",
   "typings": "./dist/main.d.ts",
-  "dependencies": {
-    "@threestup/monads": "^0.2.3",
-    "moment": "^2.18.1"
+  "engines": {
+    "node": ">=8.5.0"
   },
-  "devDependencies": {
-    "@types/jest": "^20.0.2",
-    "@types/node": "^8.0.9",
-    "jest": "^20.0.4",
-    "prettier": "^1.5.2",
-    "prettier-standard": "^6.0.0",
-    "ts-jest": "^20.0.7",
-    "typescript": "^2.4.1"
+  "dependencies": {
+    "@openmaths/graph-events": "^0.1.3",
+    "@threestup/monads": "^0.2.4"
   },
   "scripts": {
     "test": "make test"
+  },
+  "devDependencies": {
+    "@types/jest": "^21.1.0",
+    "@types/node": "^8.0.30",
+    "jest": "^21.1.0",
+    "prettier": "^1.7.0",
+    "prettier-standard": "^6.0.0",
+    "ts-jest": "^21.0.1",
+    "typescript": "^2.5.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:OpenMaths/mod-utils.git"
   },
   "author": "Slavomir Vojacek <slavomirvojacek@gmail.com>",
   "license": "ISC"
