--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "engines": {
     "node": ">=8.5.0"
   },
+  "scripts": {
+    "start": "make compile && node ./dist/main.js",
+    "test": "make test"
+  },
   "dependencies": {
     "@openmaths/graph-events": "^0.1.3",
     "@threestup/monads": "^0.2.4"
-  },
-  "scripts": {
-    "test": "make test"
   },
   "devDependencies": {
     "@types/jest": "^21.1.0",
