--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "test": "make test"
   },
   "dependencies": {
-    "@openmaths/graph-events": "^1.2.0",
-    "@threestup/monads": "^0.4.0",
+    "@openmaths/graph-events": "^1.6.0",
+    "@threestup/monads": "^1.0.4",
     "shortid": "^2.2.8"
   },
   "devDependencies": {
-    "@types/jest": "22.1.1",
-    "@types/node": "8.5.9",
+    "@types/jest": "^23.1.3",
+    "@types/node": "^10.5.0",
     "@types/shortid": "0.0.29",
-    "jest": "22.1.4",
-    "prettier": "1.10.2",
-    "prettier-standard": "8.0.0",
-    "ts-jest": "22.0.3",
-    "typescript": "2.7.1"
+    "jest": "^23.2.0",
+    "prettier": "^1.13.7",
+    "prettier-standard": "^8.0.1",
+    "ts-jest": "^22.4.6",
+    "typescript": "^2.9.2"
   },
   "repository": {
     "type": "git",
