--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@openmaths/graph-events": "^1.6.0",
     "@threestup/monads": "^1.0.4",
     "shortid": "^2.2.8",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "uuid-validate": "0.0.3"
   },
   "devDependencies": {
     "@types/jest": "^23.1.3",
     "@types/node": "^10.5.0",
     "@types/shortid": "0.0.29",
     "@types/uuid": "^3.4.3",
+    "@types/uuid-validate": "0.0.0",
     "jest": "^23.2.0",
     "prettier": "^1.13.7",
     "prettier-standard": "^8.0.1",
