--- a/package.json
+++ b/package.json
@@ -5,30 +5,33 @@
   "main": "./dist/main.js",
   "typings": "./dist/main.d.ts",
   "engines": {
-    "node": ">=8.9.0"
+    "node": ">=9.10.0",
+    "npm": ">=6.1.0"
   },
   "scripts": {
     "start": "make compile && node ./dist/main.js",
     "test": "make test"
   },
   "dependencies": {
-    "@openmaths/graph-events": "^1.6.0",
     "@threestup/monads": "^1.0.4",
-    "shortid": "^2.2.8",
+    "shortid": "^2.2.13",
+    "tslib": "^1.9.3",
     "uuid": "^3.3.2",
     "uuid-validate": "0.0.3"
   },
   "devDependencies": {
-    "@types/jest": "^23.1.3",
-    "@types/node": "^10.5.0",
+    "@types/jest": "^23.3.1",
+    "@types/node": "^10.7.1",
     "@types/shortid": "0.0.29",
     "@types/uuid": "^3.4.3",
     "@types/uuid-validate": "0.0.0",
-    "jest": "^23.2.0",
-    "prettier": "^1.13.7",
+    "jest": "^23.5.0",
+    "prettier": "^1.14.2",
     "prettier-standard": "^8.0.1",
-    "ts-jest": "^22.4.6",
-    "typescript": "^2.9.2"
+    "ts-jest": "^23.1.4",
+    "tslint": "^5.11.0",
+    "tslint-config-security": "^1.4.0",
+    "typescript": "^3.0.1"
   },
   "repository": {
     "type": "git",
