--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@openmaths/utils",
+  "name": "@usefultools/utils",
   "version": "5.0.0",
   "description": "A collection of light-weight methods and helpers for defensive programming",
   "main": "./dist/main.js",
@@ -20,22 +20,22 @@
     "uuid-validate": "0.0.3"
   },
   "devDependencies": {
-    "@types/jest": "23.3.1",
-    "@types/node": "10.7.1",
+    "@types/jest": "^23.3.2",
+    "@types/node": "^10.11.3",
     "@types/shortid": "0.0.29",
-    "@types/uuid": "3.4.3",
+    "@types/uuid": "^3.4.4",
     "@types/uuid-validate": "0.0.0",
-    "jest": "23.5.0",
-    "prettier": "1.14.2",
+    "jest": "^23.6.0",
+    "prettier": "^1.14.3",
     "prettier-standard": "8.0.1",
-    "ts-jest": "23.1.4",
+    "ts-jest": "^23.10.3",
     "tslint": "5.11.0",
-    "tslint-config-security": "1.4.0",
-    "typescript": "3.0.1"
+    "tslint-config-security": "^1.5.0",
+    "typescript": "^3.1.1"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:OpenMaths/mod-utils.git"
+    "url": "git@github.com:litchi-io/utils.git"
   },
   "author": "Slavomir Vojacek <slavomirvojacek@gmail.com>",
   "license": "ISC"
