chore(Readme): Update readme

--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "type": "git",
     "url": "git@github.com:litchi-io/utils.git"
   },
-  "author": "Slavomir Vojacek <slavomirvojacek@gmail.com>",
+  "author": "Slavo Vojacek <slavomirvojacek@gmail.com>",
   "license": "ISC"
 }
