--- a/package.json
+++ b/package.json
@@ -1,41 +1,51 @@
 {
-  "name": "@usefultools/utils",
-  "version": "6.3.1",
-  "description": "A collection of light-weight methods and helpers for defensive programming",
-  "main": "./dist/main.js",
-  "typings": "./dist/main.d.ts",
+  "name": "@hqoss/guards",
+  "version": "0.0.0",
+  "description": "A comprehensive collection of type guards for TypeScript and JavaScript",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
   "engines": {
-    "node": ">=9.10.0",
-    "npm": ">=6.1.0"
+    "node": ">=12",
+    "npm": ">=6"
   },
   "scripts": {
-    "start": "make compile && node ./dist/main.js",
-    "test": "make test"
+    "build": "rm -rf ./dist && tsc",
+    "format": "prettier --write \"./{src,test}/**/*.ts\"",
+    "format:check": "prettier --check \"./{src,test}/**/*.ts\"",
+    "test": "nyc ava",
+    "generate-docs": "rm -rf ./docs && typedoc --excludePrivate --excludeNotExported --plugin typedoc-plugin-markdown --out ./docs && rm ./docs/README.md",
+    "preversion": "npm run format:check && npm run build && npm test",
+    "prepublishOnly": "npm run format:check && npm run build && npm test",
+    "postversion": "git push --follow-tags"
   },
+  "keywords": [
+    "type",
+    "guard",
+    "guards",
+    "typeguard",
+    "typeguards",
+    "javascript",
+    "js",
+    "typescript",
+    "node",
+    "node.js"
+  ],
+  "author": "Slavo Vojacek",
+  "license": "MIT",
   "dependencies": {
-    "shortid": "^2.2.15",
-    "tslib": "^1.10.0",
-    "uuid": "^3.3.3",
-    "uuid-validate": "0.0.3"
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.25",
-    "@types/node": "^13.1.2",
-    "@types/shortid": "0.0.29",
-    "@types/uuid": "^3.4.6",
-    "@types/uuid-validate": "0.0.1",
-    "jest": "^24.9.0",
-    "prettier": "^1.19.1",
-    "prettier-standard": "^16.1.0",
-    "ts-jest": "^24.2.0",
-    "tslint": "^5.20.1",
-    "tslint-config-security": "^1.16.0",
-    "typescript": "^3.7.4"
+    "ava": "^3.8.2",
+    "nyc": "^15.1.0",
+    "prettier": "2.0.5",
+    "ts-node": "^8.10.2",
+    "typedoc": "^0.17.7",
+    "typedoc-plugin-markdown": "^2.2.17",
+    "typescript": "^3.9.3"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:litchi-io/utils.git"
-  },
-  "author": "Slavo Vojacek <slavomirvojacek@gmail.com>",
-  "license": "ISC"
+    "url": "git@github.com:hqoss/guards.git"
+  }
 }
